# cat-dogs-api

./: Dockerfile  README.md  dev-requirements.txt  docker-compose.yaml  lint.sh  main.py  pyproject.toml  requirements.txt  start-service.sh  test-Dockerfile
.github/workflows/: cats-dogs-build.yaml
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
test/v1/: test_api.py
v1/: models.py  predictor.py
